# invoice-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: sample_output.json
n8n/: README.md  workflow.json
src/invoice_ai/: __init__.py  cli.py  exporters.py  extractor.py  models.py  pdf_utils.py
tests/: test_cli.py  test_exporters.py  test_extractor.py  test_models.py
